--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-ext
 tokio = { version = "*", features = ["full"] }
 uuid = { version = "*", features = ["v4"] }
 num_enum = "*"
+ahash = "*"
